--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<html>
+    <head>
+        <title> Назва сайту </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
+    <body>
+        <header>Два слова про мій сайт</header>
+
+        <main>
+            <h1>Основний заголовок(Назва сайту)</h1>
+            <h2> Що це за сайт </h2>
+
+            <p>
+                Декілька речень про те що відбувається на нашому сайті            
+            </p>
+            <p> 
+                Lheubq f,pfw yfuijuj cfqne
+            </p>
+
+            <p class="pimg">
+                <img class="banner" src="https://i.pinimg.com/236x/c2/71/f1/c271f1277907702a2f5119f04a730364.jpg" >
+            </p>
+
+            <table>
+
+                <tr>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                </tr>
+                 <tr>
+                    <td>8</td>
+                </tr>
+
+            </table>
+
+        </main>
+
+        <footer>
+            email@email.email
+
+        </footer>
+
+    </body>
+</html>
